Sidebar fixed
sidebar styled properly
socket bugs squashed

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -75,3 +75,7 @@ body {
 .MuiPaper-root {
   background-color: transparent !important;
 }
+
+.channel-title-color {
+  color: #8e9297;
+}
