--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -54,12 +54,6 @@
   background-color: rgb(50, 53, 59);
 }
 
-.active-member-bar {
-  background-color: #2f3136!important;
-  max-height: 100%;
-  height: 100%;
-}
-
 .displayName-text:hover {
   text-decoration: underline;
   cursor: pointer;
